# glib

./: CMakeLists.txt  README.md  glibExtractor.sln
glibExtractor/: glibExtractor.vcxproj  main.cpp
lib/: CMakeLists.txt  exceptions.hxx  glib.cxx  glib.hxx  glib_defs.hxx  glib_exception.hxx  glib_file.cxx  glib_file.hxx  glib_file_validator.cxx  glib_file_validator.hxx  glib_version.hxx.in
src/: CMakeLists.txt  arg_provider.hxx  frontend.cxx  frontend.hxx  frontend_exception.hxx  main.cxx
test/: CMakeLists.txt  arg_provider.test.cxx  glib.test.cxx  glib_file.test.cxx  glib_file_validator.test.cxx
